syntax = "proto2";
package fi.aalto.ssg.opentee.imps.pbdatatypes;

message TeecOperation{
    required int32 mStarted = 1;
    required repeated TeecParameter mParams = 2;
}

message TeecParameter{
    enum Type { sm = 1; val = 2;}

    required Type type = 1;
    optional TeecSharedMemory teecSharedMemory = 2;
    optional TeecValue teecValue = 3;
}

message TeecSharedMemory{
    required bytes mBuffer = 1;
    required int32 mFlag = 2;
    optional int32 mReturnSize = 3;
    optional int32 mID = 4;
}

message TeecSharedMemoryReference{
    required TeecSharedMemory parent = 1;
    required int32  mOffset = 2;
}

message TeecValue{
    enum Type{ TEEC_VALUE_INPUT = 0x0000000; TEEC_VALUE_OUTPUT = 0x00000001; TEEC_VALUE_INOUT= 0x00000002;}

    required int32 a = 1;
    required int32 b = 2;
    required Type mFlag = 3;

}

